Refactoring css with SASS

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,17 +15,17 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/portfolio.min.css" />
   </head>
   <body>
     <header class="header">
       <div class="container">
         <div class="header__container">
           <nav class="header__nav">
-            <a class="logo link" href="./index.html" lang="en"
-              ><span class="accent">Web</span>Studio</a
+            <a class="logo" href="./index.html" lang="en"
+              ><span class="logo__accent">Web</span>Studio</a
             >
-            <ul class="header__site-nav list">
+            <ul class="header__site-nav">
               <li class="header__item">
                 <a class="header__link" href="./index.html">Студія</a>
               </li>
@@ -35,7 +35,7 @@
               <li><a class="header__link" href="#">Контакти</a></li>
             </ul>
           </nav>
-          <ul class="auth-contact list">
+          <ul class="auth-contact">
             <li>
               <a class="auth-contact__link" href="mailto:info@devstudio.com">
                 <svg width="16" height="12">
@@ -60,16 +60,16 @@
       <section class="section portfolio">
         <div class="container">
           <h1 class="visually-hidden">Портфоліо</h1>
-          <ul class="portfolio__buttons list">
+          <ul class="portfolio__buttons">
             <li><button class="portfolio__button" type="button">Усі</button></li>
             <li><button class="portfolio__button" type="button">Веб-сайти</button></li>
             <li><button class="portfolio__button" type="button">Додатки</button></li>
             <li><button class="portfolio__button" type="button">Дизайн</button></li>
             <li><button class="portfolio__button" type="button">Маркетинг</button></li>
           </ul>
-          <ul class="portfolio__cards list">
+          <ul class="portfolio__cards">
             <li class="card">
-              <a class="card__link link" href="#">
+              <a class="card__link" href="#">
                 <div class="card__overlay">
                   <img
                     class="card__image"
@@ -90,7 +90,7 @@
               </a>
             </li>
             <li class="card">
-              <a class="card__link link" href="#">
+              <a class="card__link" href="#">
                 <div class="card__overlay">
                   <img
                     class="card__image"
@@ -111,7 +111,7 @@
               </a>
             </li>
             <li class="card">
-              <a class="card__link link" href="#">
+              <a class="card__link" href="#">
                 <div class="card__overlay">
                   <img
                     class="card__image"
@@ -132,7 +132,7 @@
               </a>
             </li>
             <li class="card">
-              <a class="card__link link" href="#">
+              <a class="card__link" href="#">
                 <div class="card__overlay">
                   <img
                     class="card__image"
@@ -153,7 +153,7 @@
               </a>
             </li>
             <li class="card">
-              <a class="card__link link" href="#">
+              <a class="card__link" href="#">
                 <div class="card__overlay">
                   <img
                     class="card__image"
@@ -174,7 +174,7 @@
               </a>
             </li>
             <li class="card">
-              <a class="card__link link" href="#">
+              <a class="card__link" href="#">
                 <div class="card__overlay">
                   <img
                     class="card__image"
@@ -195,7 +195,7 @@
               </a>
             </li>
             <li class="card">
-              <a class="card__link link" href="#">
+              <a class="card__link" href="#">
                 <div class="card__overlay">
                   <img
                     class="card__image"
@@ -216,7 +216,7 @@
               </a>
             </li>
             <li class="card">
-              <a class="card__link link" href="#">
+              <a class="card__link" href="#">
                 <div class="card__overlay">
                   <img
                     class="card__image"
@@ -237,7 +237,7 @@
               </a>
             </li>
             <li class="card">
-              <a class="card__link link" href="#">
+              <a class="card__link" href="#">
                 <div class="card__overlay">
                   <img
                     class="card__image"
@@ -264,14 +264,14 @@
     <footer class="footer">
       <div class="container footer__container">
         <div>
-          <a class="logo link footer__logo" href="./index.html" lang="en"
-            ><span class="accent">Web</span>Studio</a
+          <a class="logo footer__logo" href="./index.html" lang="en"
+            ><span class="logo__accent">Web</span>Studio</a
           >
           <address class="address">
-            <ul class="address__list list">
+            <ul class="address__list">
               <li class="address__item">
                 <a
-                  class="address__link link"
+                  class="address__link"
                   href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
@@ -279,21 +279,19 @@
                 >
               </li>
               <li class="address__item">
-                <a class="address__contacts-link link" href="mailto:info@devstudio.com"
+                <a class="address__contacts-link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="address__item">
-                <a class="address__contacts-link link" href="tel:+380961111111"
-                  >+38 096 111 11 11</a
-                >
+                <a class="address__contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
         <div class="join-container">
           <h3 class="join-container__title">Приєднуйтесь</h3>
-          <ul class="social list">
+          <ul class="social">
             <li class="social__item">
               <a class="social__link footer__social-link" href="#">
                 <svg class="social__icon" width="20" height="20">
