--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
       <div class="container">
         <div class="header__container">
           <nav class="header__nav">
-            <a class="logo link" href="./index.html" lang="en"
-              ><span class="accent">Web</span>Studio</a
+            <a class="logo" href="./index.html" lang="en"
+              ><span class="logo__accent">Web</span>Studio</a
             >
-            <ul class="header__site-nav list">
+            <ul class="header__site-nav">
               <li class="header__item">
                 <a class="header__link header__link--current" href="./index.html">Студія</a>
               </li>
@@ -33,7 +33,7 @@
               <li><a class="header__link" href="#">Контакти</a></li>
             </ul>
           </nav>
-          <ul class="auth-contact list">
+          <ul class="auth-contact">
             <li>
               <a class="auth-contact__link" href="mailto:info@devstudio.com">
                 <svg width="16" height="12">
@@ -64,14 +64,14 @@
       <section class="section">
         <div class="container">
           <h2 class="section__title visually-hidden">Особливості</h2>
-          <ul class="features list">
+          <ul class="features">
             <li class="features__item">
               <div class="features__icon">
                 <svg width="70" height="70">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="features__title">Увага до деталей</h3>
+              <h3 class="subtitle">Увага до деталей</h3>
               <p class="features__text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
@@ -82,7 +82,7 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="features__title">Пунктуальність</h3>
+              <h3 class="subtitle">Пунктуальність</h3>
               <p class="features__text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
@@ -93,7 +93,7 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="features__title">Планування</h3>
+              <h3 class="subtitle">Планування</h3>
               <p class="features__text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
@@ -104,7 +104,7 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="features__title">Сучасні технології</h3>
+              <h3 class="subtitle">Сучасні технології</h3>
               <p class="features__text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
               </p>
@@ -115,7 +115,7 @@
       <section class="section product-section">
         <div class="container">
           <h2 class="section__title">Чим ми займаємося</h2>
-          <ul class="product-section__list list">
+          <ul class="product-section__list">
             <li class="product-section__item">
               <img src="./images/desktop-app.jpg" alt="Десктопні додатки" width="370" />
               <p class="product-section__text">Десктопні додатки</p>
@@ -134,7 +134,7 @@
       <section class="section team-section">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
-          <ul class="team-section__list list">
+          <ul class="team-section__list">
             <li class="team-section__item">
               <img
                 class="team-section__image"
@@ -145,7 +145,7 @@
               <div class="team-section__worker">
                 <h3 class="team-section__title">Ігор Дем'яненко</h3>
                 <p class="team-section__text">Product Designer</p>
-                <ul class="social list">
+                <ul class="social">
                   <li class="social__item">
                     <a class="social__link" href="#">
                       <svg class="social__icon" width="20" height="20">
@@ -187,7 +187,7 @@
               <div class="team-section__worker">
                 <h3 class="team-section__title">Ольга Рєпіна</h3>
                 <p class="team-section__text">Frontend Developer</p>
-                <ul class="social list">
+                <ul class="social">
                   <li class="social__item">
                     <a class="social__link" href="#">
                       <svg class="social__icon" width="20" height="20">
@@ -224,7 +224,7 @@
               <div class="team-section__worker">
                 <h3 class="team-section__title">Микола Тарасов</h3>
                 <p class="team-section__text">Marketing</p>
-                <ul class="social list">
+                <ul class="social">
                   <li class="social__item">
                     <a class="social__link" href="#">
                       <svg class="social__icon" width="20" height="20">
@@ -266,7 +266,7 @@
               <div class="team-section__worker">
                 <h3 class="team-section__title">Михайло Єрмаков</h3>
                 <p class="team-section__text">UI Designer</p>
-                <ul class="social list">
+                <ul class="social">
                   <li class="social__item">
                     <a class="social__link" href="#">
                       <svg class="social__icon" width="20" height="20">
@@ -304,7 +304,7 @@
       <section class="section">
         <div class="container">
           <h2 class="section__title">Постійні клієнти</h2>
-          <ul class="clients list">
+          <ul class="clients">
             <li class="clients__item">
               <a class="clients__link" href="#">
                 <svg class="clients__icon" width="106" height="60">
@@ -412,14 +412,14 @@
     <footer class="footer">
       <div class="container footer__container">
         <div>
-          <a class="logo link footer__logo" href="./index.html" lang="en"
-            ><span class="accent">Web</span>Studio</a
+          <a class="logo footer__logo" href="./index.html" lang="en"
+            ><span class="logo__accent">Web</span>Studio</a
           >
           <address class="address">
-            <ul class="address__list list">
+            <ul class="address__list">
               <li class="address__item">
                 <a
-                  class="address__link link"
+                  class="address__link"
                   href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
@@ -427,21 +427,19 @@
                 >
               </li>
               <li class="address__item">
-                <a class="address__contacts-link link" href="mailto:info@devstudio.com"
+                <a class="address__contacts-link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="address__item">
-                <a class="address__contacts-link link" href="tel:+380961111111"
-                  >+38 096 111 11 11</a
-                >
+                <a class="address__contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
         <div class="join-container">
-          <h3 class="join-container__title">Приєднуйтесь</h3>
-          <ul class="social list">
+          <h3 class="subtitle subtitle--inverse">Приєднуйтесь</h3>
+          <ul class="social">
             <li class="social__item">
               <a class="social__link footer__social-link" href="#">
                 <svg class="social__icon" width="20" height="20">
@@ -475,7 +473,7 @@
 
         <form class="mailing-form" name="mailing-form" autocomplete="on" novalidate>
           <div class="mailing-form__container">
-            <label class="mailing-form__label" for="sign-up">Підпишіться на розсилку</label>
+            <label class="subtitle subtitle--inverse" for="sign-up">Підпишіться на розсилку</label>
             <input
               class="mailing-form__input"
               type="email"
