--- a/portfolio.html
+++ b/portfolio.html
@@ -290,7 +290,7 @@
           </address>
         </div>
         <div class="join-container">
-          <h3 class="join-container__title">Приєднуйтесь</h3>
+          <h3 class="subtitle subtitle--inverse">Приєднуйтесь</h3>
           <ul class="social">
             <li class="social__item">
               <a class="social__link footer__social-link" href="#">
@@ -325,7 +325,7 @@
 
         <form class="mailing-form" name="mailing-form" autocomplete="on" novalidate>
           <div class="mailing-form__container">
-            <label class="mailing-form__label" for="sign-up">Підпишіться на розсилку</label>
+            <label class="subtitle subtitle--inverse" for="sign-up">Підпишіться на розсилку</label>
             <input
               class="mailing-form__input"
               type="email"
